# aoc2025

./: .gitignore  Cargo.toml  rustfmt.toml
benches/: d01_bench.rs  d02_bench.rs  d03_bench.rs  d04_bench.rs  d05_bench.rs  d06_bench.rs  d07_bench.rs  d08_bench.rs  d10_bench.rs  d11_bench.rs  d12_bench.rs  d1_bench.rs  d2_bench.rs  d3_bench.rs  d4_bench.rs  d5_bench.rs  d6_bench.rs  d7_bench.rs  d8_bench.rs
inputs/: d6_sample.txt  d7_pascal_sample.txt
src/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d1.rs  d10.rs  d11.rs  d12.rs  d2.rs  d3.rs  d4.rs  d5.rs  d7.rs  d8.rs  lib.rs  qtui.rs  util.rs
src/qtui/: gauge.rs  grid.rs  render.rs
src/util/: errors.rs  grid.rs  math.rs
