[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[toolchain]
channel = "nightly"

[dependencies]
colored = "3.0.0"
itertools = "0.14.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "d1_bench"
harness = false

[[bench]]
name = "d2_bench"
harness = false

[[bench]]
name = "d3_bench"
harness = false

[[bench]]
name = "d4_bench"
harness = false

[[bench]]
name = "d5_bench"
harness = false

[[bench]]
name = "d6_bench"
harness = false

[[bench]]
name = "d7_bench"
harness = false

[[bench]]
name = "d8_bench"
harness = false

[[bin]]
name = "d1"

[[bin]]
name = "d2"

[[bin]]
name = "d3"

[[bin]]
name = "d4"

[[bin]]
name = "d5"

[[bin]]
name = "d6"

[[bin]]
name = "d7"

[[bin]]
name = "d8"
