[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[toolchain]
channel = "nightly"

[dependencies]
colored = "3.0.0"
itertools = "0.14.0"
regex = "1.12.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "d01_bench"
harness = false

[[bench]]
name = "d02_bench"
harness = false

[[bench]]
name = "d03_bench"
harness = false

[[bench]]
name = "d04_bench"
harness = false

[[bench]]
name = "d05_bench"
harness = false

[[bench]]
name = "d06_bench"
harness = false

[[bench]]
name = "d07_bench"
harness = false

[[bench]]
name = "d08_bench"
harness = false

[[bench]]
name = "d09_bench"
harness = false

[[bench]]
name = "d10_bench"
harness = false

[[bench]]
name = "d11_bench"
harness = false

[[bench]]
name = "d12_bench"
harness = false

[[bin]]
name = "d01"

[[bin]]
name = "d02"

[[bin]]
name = "d03"

[[bin]]
name = "d04"

[[bin]]
name = "d05"

[[bin]]
name = "d06"

[[bin]]
name = "d07"

[[bin]]
name = "d08"

[[bin]]
name = "d09"

[[bin]]
name = "d10"

[[bin]]
name = "d11"

[[bin]]
name = "d12"
