[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[toolchain]
channel = "nightly"

[dependencies]
anyhow = "1.0.100"
colored = "3.0.0"
itertools = "0.14.0"
num-traits = "0.2.19"
regex = "1.12.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "d01_bench"
harness = false

[[bench]]
name = "d02_bench"
harness = false

[[bench]]
name = "d03_bench"
harness = false

[[bench]]
name = "d04_bench"
harness = false

[[bench]]
name = "d05_bench"
harness = false

[[bench]]
name = "d06_bench"
harness = false

[[bench]]
name = "d07_bench"
harness = false

[[bench]]
name = "d08_bench"
harness = false

[[bench]]
name = "d09_bench"
harness = false

[[bench]]
name = "d10_bench"
harness = false

[[bench]]
name = "d11_bench"
harness = false

[[bench]]
name = "d12_bench"
harness = false
